...
                    android:layout_height="wrap_content"
                    android:src="@drawable/icn_item_arrow_right"/>

            </LinearLayout>

            <TextView
                android:id="@+id/requesting"
                style="@style/RATextView.MontserratLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/autocomplete_height"
                android:layout_marginLeft="@dimen/basic_widget_margin"
                android:layout_marginRight="@dimen/basic_widget_margin"
                android:layout_marginTop="@dimen/basic_widget_margin"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/pickup_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:clickable="true"
...
                        app:ringColor="#FFFFFF"
                        app:ringThickness="1dp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/set_pickup_location"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="4"
...
            style="@style/LinearLayout.Vertical"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:alpha="@{mapModel.controlsAlpha}" />

        <ImageView
            android:id="@+id/cancel_pending_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/material_padding"
            android:src="@drawable/icn_cancel"
...
