...
            android:layout_marginRight="@dimen/basic_widget_margin"
            android:layout_marginBottom="@dimen/basic_widget_margin"
            android:clickable="true"
            android:focusable="true"> <!-- RA-9460: set focusable/clickable to prevent map interaction -->

            <RelativeLayout
                android:id="@+id/requestPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_request_buttons"
                    android:layout_width="match_parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:layout_below="@+id/ll_request_buttons"
                    android:background="@color/divider" />

                <Button
                    android:id="@+id/btn_request_ride"
                    style="@style/Button.RoundedBlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_buttons_divider"
                    android:layout_marginLeft="@dimen/btn_request_ride_margin_left"
                    android:layout_marginRight="@dimen/btn_request_ride_margin_right"
                    android:layout_marginTop="@dimen/btn_request_ride_margin_top"
                    android:text="@string/request_ride" />

                <TextView
                    android:id="@+id/tv_estimate_pickup_time"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_request_ride"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/basic_widget_margin"
...
